replaced jupiter sdk with fetch version

--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "setup": "./scripts/setup.sh",
-  "setup:win": "scripts\\setup.bat",
-  "dev": "tsx watch src/cli/dashboard.ts",
-  "build": "tsc",
-  "start": "pm2 start ecosystem.config.js",
-  "stop": "pm2 stop all",
-  "agent:create": "tsx src/cli/commands.ts create-agent",
-  "agent:start": "tsx src/cli/commands.ts start-agent",
-  "agent:list": "pm2 list",
-  "scale": "./scripts/scale-test.sh",
-  "test": "vitest",
-  "dashboard": "tsx src/cli/dashboard.ts"
-},
+    "setup": "./scripts/setup.sh",
+    "setup:win": "scripts\\setup.bat",
+    "dev": "tsx watch src/cli/dashboard.ts",
+    "build": "tsc",
+    "start": "pm2 start ecosystem.config.js",
+    "stop": "pm2 stop all",
+    "agent:create": "tsx src/cli/commands.ts create-agent",
+    "agent:start": "tsx src/cli/commands.ts start-agent",
+    "agent:list": "pm2 list",
+    "scale": "./scripts/scale-test.sh",
+    "test": "vitest",
+    "dashboard": "tsx src/cli/dashboard.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@jup-ag/core": "^4.0.0-beta.21",
     "@solana/web3.js": "^1.98.4",
     "@turnkey/sdk-server": "^5.1.0",
     "@turnkey/solana": "^1.1.25",
@@ -28,6 +29,7 @@
     "better-sqlite3": "^12.6.2",
     "blessed": "^0.1.81",
     "commander": "^14.0.3",
+    "cross-fetch": "^4.1.0",
     "dotenv": "^17.3.1",
     "pm2": "^6.0.14",
     "tsx": "^4.21.0",
